# 3D-Spatial-Audio

./: .gitignore  CMakeLists.txt  README.md  TODO.md  gitCheatSheet.txt
plugin/: CMakeLists.txt
plugin/include/3DAudioPlugin/: CustomLookAndFeel.h  GainMeter.h  HRTFProcessor.h  LevelMeter.h  PluginEditor.h  PluginProcessor.h  XYPad.h
plugin/src/: GainMeter.cpp  HRTFProcessor.cpp  LevelMeter.cpp  PluginEditor.cpp  PluginProcessor.cpp  XYPad.cpp
